--- a/kap14/kap14.tex
+++ b/kap14/kap14.tex
@@ -217,13 +217,13 @@ et, avec $Q$ (charge totale) et $S$ (surface des armatures)
     \draw[line width=0.4pt] (7.7,-0.3) -- (6.7,-1) node[color=betterPurple,left] {$S.I.$};
 \end{tikzpicture}
 
-avec la perméabilité du vide
+avec $\mu_{0}$ la perméabilité du vide
 $$\mu_{0}=4\pi\cdot10^{-7} $$\\
 On obtient deux bobines de Helmholz quand $d=R$; Le champ est donc uniforme
 
 \end{Definition}
 
-\section{Mouvement, vitesse et accélération d'un systeme physique}
+\section{Mouvement, vitesse et accélération d'un système physique}
 
 \begin{Definition}
 
@@ -240,7 +240,7 @@ $$a=\sqrt{{a_{\tau}}^2 + {a_{\eta}}^2}$$\\
 Voici les trois formules magiques pour un mouvement rectiligne uniformément varié:
 $$a_{x}=cste $$
 $$v_{x}=a_{x}\cdot t +v_{x0}$$
-$$x=\frac{1}{2}a_{x}\cdot t^2 + v_{x0} +x_{0} $$\\
+$$x=\frac{1}{2}a_{x}\cdot t^2 + v_{x0}\cdot t +x_{0} $$\\
 
 Dans un mouvement circulaire de rayon $R$, avec $\omega = \dfrac{\Delta \theta}{\Delta t}$ étant la vitesse angulaire,\\
 
