sorry wieder fehler

--- a/kap14/kap14.tex
+++ b/kap14/kap14.tex
@@ -288,7 +288,7 @@ L'énergie fait bouger des choses... Il existe plusieures formes d'énergie :
 \begin{itemize}
 \item $E_{c}$ L'énergie cinétique, Vitesse $v$ : $E_{c} = 1/2 \cdot m \cdot v^2 $
 \item $E_{pp}$ L'énergie potentielle de pesanteur, Altitude $z$ : $E_{pp} = m \cdot g \cdot z$
-\item $E_{pe}$ L'énergie potentielle élastique, Longueur déformée $x$ : $E_{pe} = 1/2 \cdot k \cdot x$
+\item $E_{pe}$ L'énergie potentielle élastique, Longueur déformée $x$ : $E_{pe} = 1/2 \cdot k \cdot x^2$
 \item $E_{th}$ L'énergie thermique, Température $T$ 
 \item $E_{c}$ L'énergie potentielle électrique : $E_{c} = 1/2 \cdot C \cdot U_{c}^2$
 \item $E_{m}$ L'énergie potentielle magnétique : $E_{m} = 1/2 \cdot L \cdot i^2$
