--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -524,7 +524,7 @@ Eine monotone Folge ist genau dann konvergent, wenn sie beschränkt ist.
 \end{Theorem}
 
 \begin{Beweis}
-Ohne Beschränkung der Allgeminheit nehmen wir an, dass die Folge monoton wachsend sei und sei $a$ die kleinste obere Schranke (Supremum).
+Ohne Beschränkung der Allgemeinheit nehmen wir an, dass die Folge monoton wachsend sei und sei $a$ die kleinste obere Schranke (Supremum).
 \begin{itemize}
 \item Sei $\varepsilon\geq0$ dann ist $a-\varepsilon$ keine obere Schranke der Folgeglieder $\{a_n;\in\N\}$.
 \item $(a_n)$ ist wachsend
