--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -193,7 +193,7 @@ $\lim\limits_{x \rightarrow x_{0}}f(x) = g $\quad $\Leftrightarrow$ \quad $\fora
 
 \begin{Definition}
 	Regel von l'Hospital: für Grenzwerte des Typs $0/0$ und $\infty/\infty$\\
-	Seien zwei differenzierbare Funktionen $f$ und $g$ und eine Zahl $x_{0} : g(x_{0})\neq0$ und gelte entweder\\
+	Seien zwei differenzierbare Funktionen $f$ und $g$ und gelte entweder\\
 	$$\lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = \infty \qquad \text{ODER} \qquad  \lim\limits_{x \rightarrow x_{0}}g(x) = \lim\limits_{x \rightarrow x_{0}}f(x) = 0$$\\
 	(sie sind also entweder konvergent gegen $0$ oder bestimmt divergent) dann gilt:\\
 	$$\lim\limits_{x \rightarrow x_{0}} \dfrac{f(x)}{g(x)} = \lim\limits_{x \rightarrow x_{0}}\dfrac{f'(x)}{g'(x)}$$
@@ -230,11 +230,11 @@ Eine Asymptote ist eine Gerade oder Kurve, die sich dem Graphen einer Funktion i
 \begin{enumerate}
 	\item \textbf{Senkrechte Asymptote:}\\
 	Hat $f$ an der stelle $x_{0}$ eine Polstelle, und gilt:
-		$$\lim\limits_{x \rightarrow x_{0^{+}}} f(x) = \pm \infty$$
+		$$\lim\limits_{x \rightarrow x_{0^{\pm}}} f(x) = \pm \infty$$
 	dann ist die Gerade $x=x_{0}$ eine senkrechte Asymptote von $f$.
 
 	\item \textbf{Waagerechte Asymptote:}\\
-	Konvergiert $f$ f"ur $x\rightarrow \infty$ gegen eine reelle Zahl $g\in \R$, das heißt $\lim\limits_{x \rightarrow x_{0^{+}}}{f(x)}=g$, dann ist die Gerade $y=g$ die \textbf{waagerechte} Asymptote von $f$. Das Gleiche gilt f"ur $\lim\limits_{x \rightarrow -\infty}$.\\
+	Konvergiert $f$ f"ur $x\rightarrow \infty$ gegen eine reelle Zahl $g\in \R$, das heißt $\lim\limits_{x \rightarrow \infty }{f(x)}=g$, dann ist die Gerade $y=g$ die \textbf{waagerechte} Asymptote von $f$. Das Gleiche gilt f"ur $\lim\limits_{x \rightarrow -\infty}$.\\
 	Bei gebrochenrationalen Funktionen ist dies der Fall, wenn der Z"ahlergrad kleiner (dann ist $g=0$) oder gleich dem Nennergrad $m$ ist.
 
 	\item \textbf{Schr"age Asymptote:}\\
@@ -392,9 +392,9 @@ Anschaulich ist eine Umkehrfunktion eine Axenspiegelung entlang der Winkelhalbie
 Die Funktion $f(x)=x^2$ mit $D_{f} = \R_{0}^{+}$ ist umzukehren. Leichtes Spiel...\\ \\
 \begin{array}{rcccccl}
 $\Rightarrow $& $y$ &$ = $&$ x^2$\\
-$\Leftrightarrow $&$ x $&$ = $&$ \sqrt{y}$ &\quad \small { \textit{Variablen tauschen}}\\
-$\Leftrightarrow $&$ y $&$ = $&$ \sqrt{x}$\\
-$\Rightarrow $&$ \overline{f}(x)$&$=$&$\sqrt{x}$\\
+$\Leftrightarrow $&$ x $&$ = $&$ \pm \sqrt{y}$ &\quad \small { \textit{Variablen tauschen}}\\
+$\Leftrightarrow $&$ y $&$ = $&$ \pm \sqrt{x}$\\
+$\Rightarrow $&$ \overline{f}(x)$&$=$&$ \pm \sqrt{x}$\\
 
 \end{array}
 \end{Beispiel}
