--- a/MAIN/main.tex
+++ b/MAIN/main.tex
@@ -47,7 +47,7 @@
   \include{pagenumbering}
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   %Kapitel bitte hier einbinden:
-  \subfile{../kap1/kap1}%{kap1/kap1}
+  %\subfile{../../kap1/kap1}
   \subfile{../kap2/kap2}
   \subfile{../kap3/kap3}
   \subfile{../kap4/kap4}
