--- a/kap1/kap1.tex
+++ b/kap1/kap1.tex
@@ -528,7 +528,7 @@ Ohne Beschränkung der Allgemeinheit nehmen wir an, dass die Folge monoton wachs
 \begin{itemize}
 \item Sei $\varepsilon\geq0$ dann ist $a-\varepsilon$ keine obere Schranke der Folgeglieder $\{a_n;\in\N\}$.
 \item $(a_n)$ ist wachsend
-\item $\exists n_0\in\N$ mit $a_{n_{0}}$ \geq a-\varepsilon$
+\item $\exists n_0\in\N$ mit $a_{n_{0}} \geq a-\varepsilon$
 \item $\forall n>n_0$ gilt $a-\varepsilon<a_{n_{0}}\leq a_n<a+\varepsilon$\qquad|-a\\
 $\Leftrightarrow -\varepsilon < a_{n_{0}}-a\leq a_n-a<\varepsilon$
 \item $\Rightarrow \lim\limits_{n\to\infty}a_n=0$
